--- a/servicos.html
+++ b/servicos.html
@@ -27,7 +27,7 @@
         <div class="container margin20">
             <div class="row">
                 <aside class="lista margin30 sumario col-md-2" title="Links do sumário">
-                    <h2 class="subtitulo text-center">Sagas / Arcos</h2>
+                    <h2 class="subtitulo text-center">Sumário</h2>
                     <ul class="">
                         <li><a href="#tosas">Tosa</a></li>
                         <li><a href="#vet">Veterinario</a></li>
@@ -37,7 +37,7 @@
                     </ul>
                 </aside>
                 <article class="pagServicos padding30 offset-3 col-md-9">
-                    <h1 class="titulo text-center">Nossos pagServicos</h1>
+                    <h1 class="titulo text-center">Nossos Serviços</h1>
                     <div class="row">
                         <section class="col-md-12 pagServico" id="tosas">
                             <h2 class="subtitulo text-center">Tosa</h2>
