adicionado pagina de produtos

--- a/quem-somos.html
+++ b/quem-somos.html
@@ -27,7 +27,7 @@
         <div class="container">
             <article class="col-md-12">
                 <h1 class="titulo margin20 text-center">Quem somos</h1>
-                <img src="imagens/quem-somos.jpg" alt="Imagem sobre a novidade 1" class="img-responsive" style="max-width: 100%;">
+                <img src="imagens/quem-somos.jpg" alt="Imagem com um cachorro em um campo" class="img-responsive" style="max-width: 100%;">
                 <p class="margin20">
                     Boutique dos Bichos é uma empresa voltada para área dos pet's, 
                     desde 1999 atuamos e prestamos serviços em diversas áreas para pet's, 
